--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     strategy:
-      matrix: 
+      matrix:
         node-version: [16.x]
 
     steps:
@@ -24,10 +24,10 @@ jobs:
       - name: Install dependencies & build
         run: |
           npm ci
-          npm run build          
+          npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./_site
+          publish_dir: ./docs
           github_token: ${{ secrets.GITHUB_TOKEN }}
