--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A starter repository for a blog web site using the Eleventy static site generator.",
   "scripts": {
     "build": "npx @11ty/eleventy",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs",
     "bench": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
     "watch": "npx @11ty/eleventy --watch",
     "serve": "npx @11ty/eleventy --serve",
@@ -32,5 +34,8 @@
     "luxon": "^2.4.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
