--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eleventy-base-blog",
   "version": "6.0.0",
-  "description": "A starter repository for a blog web site using the Eleventy static site generator.",
+  "description": "Free Free API Education",
   "scripts": {
     "build": "npx @11ty/eleventy",
     "predeploy": "npm run build",
@@ -17,9 +17,7 @@
     "url": "git://github.com/11ty/eleventy-base-blog.git"
   },
   "author": {
-    "name": "Zach Leatherman",
-    "email": "zachleatherman@gmail.com",
-    "url": "https://zachleat.com/"
+    "name": "cmneal"
   },
   "license": "MIT",
   "bugs": {
